--- a/activiti-api-impl/activiti-api-model-shared-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-model-shared-impl/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-api-impl</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.38</version>
   </parent>
   <artifactId>activiti-api-model-shared-impl</artifactId>
   <name>Activiti API :: Common Model Implementation</name>
