--- a/activiti-api-impl/pom.xml
+++ b/activiti-api-impl/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.38</version>
   </parent>
   <artifactId>activiti-api-impl</artifactId>
   <name>Activiti :: Runtime API Parent</name>
