--- a/activiti-process-validation/pom.xml
+++ b/activiti-process-validation/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.38</version>
   </parent>
 
   <artifactId>activiti-process-validation</artifactId>
