--- a/activiti-spring-identity/pom.xml
+++ b/activiti-spring-identity/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.38</version>
   </parent>
   <artifactId>activiti-spring-identity</artifactId>
   <name>Activiti :: Spring Identity</name>
