--- a/activiti-api-basic-full-example/pom.xml
+++ b/activiti-api-basic-full-example/pom.xml
@@ -22,7 +22,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <activiti-dependencies.version>7.0.34</activiti-dependencies.version>
+    <activiti-dependencies.version>7.0.36</activiti-dependencies.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -66,4 +66,14 @@
     </plugins>
   </build>
 
+  <repositories>
+    <repository>
+      <id>alfresco</id>
+      <name>Activiti Releases</name>
+      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-releases/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
 </project>
