--- a/activiti-api-web-example/pom.xml
+++ b/activiti-api-web-example/pom.xml
@@ -38,7 +38,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <activiti-dependencies.version>7.0.34</activiti-dependencies.version>
+    <activiti-dependencies.version>7.0.36</activiti-dependencies.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -112,9 +112,12 @@
 
   <repositories>
     <repository>
-      <id>central-staging</id>
-      <name>staging</name>
-      <url>https://oss.sonatype.org/content/repositories/orgactiviti-1110</url>
+      <id>alfresco</id>
+      <name>Activiti Releases</name>
+      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-releases/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
     </repository>
   </repositories>
 
