Push to activiti-cloud-build
In order to update activiti-dependencies-parent

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -8,3 +8,5 @@ github:
       branch: develop
     - name: activiti-dependencies
       branch: develop
+    - name: activiti-cloud-build
+      branch: develop
