process instance variables initialization

--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,7 @@
     <module>activiti-spring</module>
     <module>activiti-spring-boot-starter</module>
     <module>activiti-spring-app-process</module>
+    <module>activiti-spring-process-extensions</module>
   </modules>
 
   <repositories>
