Add missing transitive dependency

--- a/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
@@ -83,6 +83,10 @@
       <artifactId>activiti-engine</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
