Consume connector definitions in api (#1984)

--- a/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-process-runtime-impl/pom.xml
@@ -16,6 +16,14 @@
     </dependency>
     <dependency>
       <groupId>org.activiti</groupId>
+      <artifactId>activiti-connector-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti</groupId>
+      <artifactId>activiti-spring-connector</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-spring</artifactId>
     </dependency>
     <dependency>
@@ -73,6 +81,10 @@
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-engine</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
