--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       </dependency>
       <dependency>
         <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-model-shared-impl</artifactId>
+        <version>${activiti-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-runtime-shared</artifactId>
         <version>${activiti-api.version}</version>
       </dependency>
@@ -41,12 +46,22 @@
       </dependency>
       <dependency>
         <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-process-model-impl</artifactId>
+        <version>${activiti-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-process-runtime</artifactId>
         <version>${activiti-api.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-task-model</artifactId>
+        <version>${activiti-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-task-model-impl</artifactId>
         <version>${activiti-api.version}</version>
       </dependency>
       <dependency>
@@ -64,6 +79,9 @@
     <module>activiti-api-process-runtime</module>
     <module>activiti-api-task-model</module>
     <module>activiti-api-task-runtime</module>
+    <module>activiti-api-model-shared-impl</module>
+    <module>activiti-api-process-model-impl</module>
+    <module>activiti-api-task-model-impl</module>
   </modules>
 
   <repositories>
