--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <activiti-build.version>7.0.39</activiti-build.version>
     <activiti-api.version>7.0.32</activiti-api.version>
     <activiti.version>7.0.45</activiti.version>
+    <activiti-core-common.version>7.0.0</activiti-core-common.version>
   </properties>
 
   <organization>
@@ -96,6 +97,13 @@
         <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-dependencies</artifactId>
         <version>${activiti-api.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti.core.common</groupId>
+        <artifactId>activiti-core-common-dependencies</artifactId>
+        <version>${activiti-core-common.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
