Import processes from application zip file

--- a/activiti-core-dependencies/pom.xml
+++ b/activiti-core-dependencies/pom.xml
@@ -35,6 +35,11 @@
       </dependency>
       <dependency>
         <groupId>org.activiti</groupId>
+        <artifactId>activiti-application</artifactId>
+        <version>${activiti.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti</groupId>
         <artifactId>activiti-engine</artifactId>
         <version>${activiti.version}</version>
       </dependency>
