--- a/activiti-core-common-dependencies/pom.xml
+++ b/activiti-core-common-dependencies/pom.xml
@@ -35,6 +35,11 @@
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
+        <artifactId>activiti-spring-application</artifactId>
+        <version>${activiti-core-common.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-connector</artifactId>
         <version>${activiti-core-common.version}</version>
       </dependency>
