--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
       </dependency>
       <dependency>
         <groupId>org.activiti</groupId>
+        <artifactId>activiti-spring-app-process</artifactId>
+        <version>${activiti.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti</groupId>
         <artifactId>activiti-spring-boot-starter</artifactId>
         <version>${activiti.version}</version>
       </dependency>
@@ -293,6 +298,7 @@
     <module>activiti-engine</module>
     <module>activiti-spring</module>
     <module>activiti-spring-boot-starter</module>
+    <module>activiti-spring-app-process</module>
   </modules>
 
   <repositories>
