--- a/activiti-spring-app-process/pom.xml
+++ b/activiti-spring-app-process/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.51</version>
   </parent>
   <artifactId>activiti-spring-app-process</artifactId>
   <name>Activiti :: Application</name>
