Add activiti-api-web-example as submodule

--- a/activiti-api-web-example/pom.xml
+++ b/activiti-api-web-example/pom.xml
@@ -43,7 +43,7 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.activiti</groupId>
+        <groupId>org.activiti.dependencies</groupId>
         <artifactId>activiti-dependencies</artifactId>
         <version>${activiti-dependencies.version}</version>
         <scope>import</scope>
