--- a/activiti-spring-process-extensions/pom.xml
+++ b/activiti-spring-process-extensions/pom.xml
@@ -13,6 +13,10 @@
     <dependencies>
         <dependency>
             <groupId>org.activiti</groupId>
+            <artifactId>activiti-bpmn-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
             <artifactId>activiti-engine</artifactId>
         </dependency>
         <dependency>
