--- a/modules/activiti-explorer/pom.xml
+++ b/modules/activiti-explorer/pom.xml
@@ -189,6 +189,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <!-- Vaadin add-ons -->
