--- a/modules/activiti-modeler/pom.xml
+++ b/modules/activiti-modeler/pom.xml
@@ -194,6 +194,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
