--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.sonatype.oss</groupId>
     <artifactId>oss-parent</artifactId>
     <version>7</version>
-    <relativePath/>
+    <relativePath />
   </parent>
   <groupId>org.activiti</groupId>
   <artifactId>activiti-root</artifactId>
@@ -18,24 +18,27 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.6</java.version>
     <!-- Dependency versions -->
-    <batik.version>1.9.1</batik.version>
-    <bouncycastle.version>1.59</bouncycastle.version>
+    <batik.version>1.10</batik.version>
+    <bouncycastle.version>1.60</bouncycastle.version>
     <camel.version>2.17.6</camel.version>
     <cxf.version>3.1.14</cxf.version>
     <drools.version>6.5.0.Final</drools.version>
     <gwt.version>2.5.1</gwt.version>
-    <hibernate.version>4.2.16.Final</hibernate.version>
-    <jackson.version>2.9.5</jackson.version>
+    <hibernate.version>4.2.21.Final</hibernate.version>
+    <jackson.version>2.9.6</jackson.version>
     <jetty.version>9.2.24.v20180105</jetty.version>
     <log4j2.version>2.8.2</log4j2.version>
     <logback.version>1.2.3</logback.version>
-    <mule.version>3.7.0</mule.version>
-    <spring.version>4.3.14.RELEASE</spring.version>
-    <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+    <mvel.version>2.4.2.Final</mvel.version>
+    <mule.version>3.9.0</mule.version>
+    <rhino.version>1.7.10</rhino.version>
+    <spring.version>4.3.20.RELEASE</spring.version>
+    <spring-boot.version>1.5.17.RELEASE</spring-boot.version>
     <!-- Plugin versions -->
     <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
     <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
     <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
     <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
@@ -45,14 +48,14 @@
     <!-- JVM params for test execution -->
     <argLine>-Duser.language=en</argLine>
     <!-- OSGi bundles properties -->
-    <activiti.artifact/>
+    <activiti.artifact />
     <activiti.osgi.import.activiti.version>version="[$(version;==;${activiti.osgi.version.clean}),$(version;=+;${activiti.osgi.version.clean}))"</activiti.osgi.import.activiti.version>
     <activiti.osgi.import.strict.version>version="[$(version;===;${activiti.osgi.version.clean}),$(version;==+;${activiti.osgi.version.clean}))"</activiti.osgi.import.strict.version>
     <activiti.osgi.import.default.version>[$(version;==;$(@)),$(version;+;$(@)))</activiti.osgi.import.default.version>
     <activiti.osgi.import.defaults></activiti.osgi.import.defaults>
-    <activiti.osgi.import.before.defaults/>
-    <activiti.osgi.import.additional/>
-    <activiti.osgi.export.additional/>
+    <activiti.osgi.import.before.defaults />
+    <activiti.osgi.import.additional />
+    <activiti.osgi.export.additional />
     <activiti.osgi.import.pkg>
       org.activiti.*;${activiti.osgi.import.activiti.version},
       ${activiti.osgi.import.before.defaults},
@@ -60,23 +63,23 @@
       ${activiti.osgi.import.additional},
       *
     </activiti.osgi.import.pkg>
-    <activiti.osgi.activator/>
+    <activiti.osgi.activator />
     <activiti.osgi.failok>false</activiti.osgi.failok>
     <activiti.osgi.export>${activiti.osgi.export.pkg};${activiti.osgi.version};-noimport:=true</activiti.osgi.export>
     <activiti.osgi.export.pkg>
       ${activiti.artifact}*,
       ${activiti.osgi.export.additional}
     </activiti.osgi.export.pkg>
-    <activiti.osgi.private.pkg/>
+    <activiti.osgi.private.pkg />
     <activiti.osgi.version>version=${project.version}</activiti.osgi.version>
     <activiti.osgi.split.pkg>-split-package:=first</activiti.osgi.split.pkg>
     <activiti.osgi.import>${activiti.osgi.import.pkg}</activiti.osgi.import>
-    <activiti.osgi.dynamic/>
+    <activiti.osgi.dynamic />
     <activiti.osgi.symbolic.name>${activiti.artifact}</activiti.osgi.symbolic.name>
     <activiti.osgi.exclude.dependencies>false</activiti.osgi.exclude.dependencies>
     <activiti.osgi.remove.headers>Ignore-Package,Include-Resource,Private-Package,Bundle-DocURL</activiti.osgi.remove.headers>
     <activiti.osgi.include.resource>{maven-resources}</activiti.osgi.include.resource>
-    <activiti.osgi.embed/>
+    <activiti.osgi.embed />
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -191,15 +194,19 @@
         <version>1.3.3</version>
       </dependency>
       <dependency>
+        <groupId>org.mvel</groupId>
+        <artifactId>mvel2</artifactId>
+        <version>${mvel.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mozilla</groupId>
+        <artifactId>rhino</artifactId>
+        <version>${rhino.version}</version>
+      </dependency>
+      <dependency>
         <groupId>com.oracle.jdbc</groupId>
         <artifactId>ojdbc5</artifactId>
         <version>11.2.0.1.0</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <version>2.6.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -207,12 +214,6 @@
         <artifactId>javax.enterprise.concurrent-api</artifactId>
         <version>1.0</version>
         <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>com.ibm.db2.jcc</groupId>
@@ -491,22 +492,12 @@
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-transcoder</artifactId>
         <version>${batik.version}</version>
-        <exclusions>
-          <exclusion>
-            <artifactId>commons-logging</artifactId>
-            <groupId>commons-logging</groupId>
-          </exclusion>
-        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-bridge</artifactId>
         <version>${batik.version}</version>
         <exclusions>
-          <exclusion>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-          </exclusion>
           <exclusion>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-script</artifactId>
@@ -674,6 +665,11 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>${maven-deploy-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-eclipse-plugin</artifactId>
           <version>${maven-eclipse-plugin.version}</version>
           <configuration>
@@ -685,6 +681,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>${maven-jar-plugin.version}</version>
+          <configuration>
+            <skipIfEmpty>false</skipIfEmpty>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -870,7 +869,7 @@
       </modules>
     </profile>
     <profile>
-      <!-- 
+      <!--
            A profile dedicated to JDK 6.
            SpringBoot module is disabled as it needs JDK7+.
       -->
@@ -1099,16 +1098,149 @@
       <activation>
         <jdk>[1.8,)</jdk>
       </activation>
+      <properties>
+        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
+      </properties>
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <configuration>
-              <additionalparam>-Xdoclint:none</additionalparam>
+              <doclint>none</doclint>
             </configuration>
           </plugin>
         </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>java-11</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <properties>
+        <corba-omgapi.version>4.1.0</corba-omgapi.version>
+        <jacoco.version>0.8.2</jacoco.version>
+        <javassist.version>3.23.1-GA</javassist.version>
+        <javax-activation.version>1.2.0</javax-activation.version>
+        <javax-annotation.version>1.3.2</javax-annotation.version>
+        <javax-jaxb.version>2.3.0</javax-jaxb.version>
+        <javax-jaxws.version>2.3.1</javax-jaxws.version>
+        <javax-jws.version>1.1</javax-jws.version>
+        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
+        <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
+        <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+        <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
+      </properties>
+      <repositories>
+        <repository>
+          <id>activiti-thirdparty</id>
+          <name>Activiti thirdparty Repository</name>
+          <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-thirdparty</url>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+      <dependencyManagement>
+        <dependencies>
+          <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${javassist.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
+            <version>${javax-activation.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${javax-annotation.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${javax-jaxb.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>${javax-jaxb.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${javax-jaxb.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>${javax-jaxws.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>javax.jws</groupId>
+            <artifactId>javax.jws-api</artifactId>
+            <version>${javax-jws.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.glassfish.corba</groupId>
+            <artifactId>glassfish-corba-omgapi</artifactId>
+            <version>${corba-omgapi.version}</version>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
+      <dependencies>
+        <dependency>
+          <groupId>javax.activation</groupId>
+          <artifactId>javax.activation-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-core</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>javax.xml.ws</groupId>
+          <artifactId>jaxws-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>javax.jws</groupId>
+          <artifactId>javax.jws-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.corba</groupId>
+          <artifactId>glassfish-corba-omgapi</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.mozilla</groupId>
+          <artifactId>rhino</artifactId>
+        </dependency>
+      </dependencies>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>${jacoco.version}</version>
+            </plugin>
+          </plugins>
+        </pluginManagement>
       </build>
     </profile>
   </profiles>
