--- a/distro/build.xml
+++ b/distro/build.xml
@@ -4,7 +4,7 @@
 
 	<property file="${user.home}/.activiti/build.properties" />
 
-	<property name="activiti.version" value="5.23.0-SNAPSHOT" />
+	<property name="activiti.version" value="5.23.0" />
 	<property name="target.distro.root" value="target/zip/activiti-${activiti.version}" />
 	<property name="activiti.website" value="../../activiti-website" />
 
