--- a/modules/activiti-bpmn-converter/pom.xml
+++ b/modules/activiti-bpmn-converter/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.activiti</groupId>
     <artifactId>activiti-parent</artifactId>
     <relativePath>../activiti-parent</relativePath>
-    <version>5.23.0-SNAPSHOT</version>
+    <version>5.23.0</version>
   </parent>
   
   <properties>
