--- a/modules/activiti-ldap/pom.xml
+++ b/modules/activiti-ldap/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-parent</artifactId>
-    <version>5.23.0-SNAPSHOT</version>
+    <version>5.23.0</version>
     <relativePath>../activiti-parent</relativePath>
   </parent>
   <artifactId>activiti-ldap</artifactId>
