--- a/modules/activiti-spring-boot/spring-boot-samples/spring-boot-sample-integration/pom.xml
+++ b/modules/activiti-spring-boot/spring-boot-samples/spring-boot-sample-integration/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-spring-boot-samples</artifactId>
-    <version>5.23.0-SNAPSHOT</version>
+    <version>5.23.0</version>
   </parent>
 
   <artifactId>spring-boot-sample-integration</artifactId>
