--- a/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-jpa/pom.xml
+++ b/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-jpa/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-spring-boot-starters</artifactId>
-    <version>5.23.0-SNAPSHOT</version>
+    <version>5.23.0</version>
   </parent>
   <artifactId>activiti-spring-boot-starter-jpa</artifactId>
   <dependencies>
