--- a/tooling/archetypes/activiti-archetype-unittest/pom.xml
+++ b/tooling/archetypes/activiti-archetype-unittest/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>archetypes</artifactId>
-    <version>5.23.0-SNAPSHOT</version>
+    <version>5.23.0</version>
   </parent>
 
   <artifactId>activiti-archetype-unittest</artifactId>
