--- a/activiti-bpmn-model/pom.xml
+++ b/activiti-bpmn-model/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.65</version>
   </parent>
 
   <artifactId>activiti-bpmn-model</artifactId>
