--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
   - name: automatic merge with strict
     conditions:
       - author=jx-activiti-cloud
-      - status-success=continuous-integration/jenkins/pr-head
+#      - status-success=continuous-integration/jenkins/pr-head
       - status-success=continuous-integration/travis-ci/pr
       - status-success=continuous-integration/travis-ci/push
       - status-success=license/cla
