--- a/dependencies-tests/pom.xml
+++ b/dependencies-tests/pom.xml
@@ -171,9 +171,15 @@
       <version>${activiti.version}</version>
       <type>pom</type>
       <exclusions>
+        <!-- Banned Dependency by @ban-blacklisted-dependencies -->
         <exclusion>
           <groupId>commons-logging</groupId>
           <artifactId>commons-logging</artifactId>
+        </exclusion>
+        <!-- Excluded commons-io:commons-io:1.3.1 -->
+        <exclusion>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
