--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.8.2</version>
+        <configuration>
+          <deployAtEnd>true</deployAtEnd>
+        </configuration>
       </plugin>
     </plugins>
   </build>
