fix: add updatebot dependency into activiti-core-common
Fixes #43

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -4,6 +4,8 @@ github:
     repositories:
     - name: activiti-api
       branch: develop
+    - name: activiti-core-commond
+      branch: develop      
     - name: activiti
       branch: develop
     - name: activiti-cloud-build
