fix: add updatebot push into activiti-cloud modules
Fixes #67

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -6,3 +6,8 @@ github:
       branch: develop
     - name: activiti-cloud-runtime-bundle-service
       branch: develop
+    - name: activiti-cloud-service-common
+      branch: develop
+    - name: activiti-cloud-api
+      branch: develop
+      
