fix: (updatebot) push version to activiti-cloud-build
Fixes #68

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -10,4 +10,7 @@ github:
       branch: develop
     - name: activiti-cloud-api
       branch: develop
+    - name: activiti-cloud-build
+      branch: develop
+      
       
