--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -5,5 +5,7 @@ github:
     - name: activiti-dependencies
       branch: develop
       useSinglePullRequest: true
+    - name: activiti
+      branch: develop      
     - name: activiti-core-common
       branch: develop
