--- a/activiti-spring-boot-starter/pom.xml
+++ b/activiti-spring-boot-starter/pom.xml
@@ -24,6 +24,22 @@
         </dependency>
         <dependency>
             <groupId>org.activiti.api</groupId>
+            <artifactId>activiti-api-process-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti.api</groupId>
+            <artifactId>activiti-api-process-runtime</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti.api</groupId>
+            <artifactId>activiti-api-process-model-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti.api</groupId>
+            <artifactId>activiti-api-model-shared</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti.api</groupId>
             <artifactId>activiti-api-runtime-shared</artifactId>
         </dependency>
         <dependency>
