--- a/activiti-connector-model/pom.xml
+++ b/activiti-connector-model/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.activiti.core.common</groupId>
     <artifactId>activiti-core-common-parent</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../activiti-core-common-parent</relativePath>
   </parent>
   <artifactId>activiti-connector-model</artifactId>
   <name>Activiti :: Connector model</name>
