--- a/activiti-core-common-dependencies/pom.xml
+++ b/activiti-core-common-dependencies/pom.xml
@@ -29,6 +29,20 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.activiti.build</groupId>
+        <artifactId>activiti-dependencies-parent</artifactId>
+        <version>${activiti-build.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti.api</groupId>
+        <artifactId>activiti-api-dependencies</artifactId>
+        <version>${activiti-api.version}</version>       
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-connector-model</artifactId>
         <version>${activiti-core-common.version}</version>
