--- a/activiti-spring-application/pom.xml
+++ b/activiti-spring-application/pom.xml
@@ -22,6 +22,7 @@
     <groupId>org.activiti.core.common</groupId>
     <artifactId>activiti-core-common-parent</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../activiti-core-common-parent</relativePath>
   </parent>
   <artifactId>activiti-spring-application</artifactId>
   <name>Activiti Core Common :: Application</name>
