--- a/activiti-spring-security/pom.xml
+++ b/activiti-spring-security/pom.xml
@@ -6,6 +6,7 @@
     <groupId>org.activiti.core.common</groupId>
     <artifactId>activiti-core-common-parent</artifactId>
     <version>7.0.0-SNAPSHOT</version>
+    <relativePath>../activiti-core-common-parent</relativePath>
   </parent>
   <artifactId>activiti-spring-security</artifactId>
   <name>Activiti :: Spring Security</name>
