fix: enforce same parent version dependency

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,16 @@
     </plugins>
   </build>
 
+  <!-- Activiti Build Parent Marker Dependency for Dependency Convergence Tests -->
+  <dependencies>
+    <dependency>
+      <groupId>org.activiti.build</groupId>
+      <artifactId>activiti-parent</artifactId>
+      <version>${activiti-build.version}</version>
+      <type>pom</type>
+    </dependency>
+  </dependencies>
+
   <modules>
     <module>dependencies</module>
     <module>dependencies-tests</module>
