fix: move activiti-dependencies-parent into root pom

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
     <module>activiti-api-task-model-impl</module>
   </modules>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.activiti.build</groupId>
+        <artifactId>activiti-dependencies-parent</artifactId>
+        <version>${activiti-build.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <repositories>
     <repository>
       <id>alfresco</id>
